--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -16,7 +16,7 @@
   --bolt-elements-code-background: theme('colors.gray.100');
   --bolt-elements-code-text: theme('colors.gray.950');
 
-  --bolt-elements-button-primary-background: theme('colors.alpha.blue.10');
+  --bolt-elements-button-primary-background: theme('colors.blue.100');
   --bolt-elements-button-primary-backgroundHover: theme('colors.alpha.blue.20');
   --bolt-elements-button-primary-text: theme('colors.blue.500');
 
@@ -34,7 +34,7 @@
   --bolt-elements-item-contentDanger: theme('colors.red.500');
   --bolt-elements-item-backgroundDefault: rgba(0, 0, 0, 0);
   --bolt-elements-item-backgroundActive: theme('colors.alpha.gray.5');
-  --bolt-elements-item-backgroundAccent: theme('colors.alpha.blue.10');
+  --bolt-elements-item-backgroundAccent: theme('colors.blue.100');
   --bolt-elements-item-backgroundDanger: theme('colors.alpha.red.10');
 
   --bolt-elements-loader-background: theme('colors.alpha.gray.10');
@@ -66,7 +66,7 @@
   --bolt-elements-prompt-background: theme('colors.alpha.white.80');
 
   --bolt-elements-sidebar-dropdownShadow: theme('colors.alpha.gray.10');
-  --bolt-elements-sidebar-buttonBackgroundDefault: theme('colors.alpha.blue.10');
+  --bolt-elements-sidebar-buttonBackgroundDefault: theme('colors.blue.100');
   --bolt-elements-sidebar-buttonBackgroundHover: theme('colors.alpha.blue.20');
   --bolt-elements-sidebar-buttonText: theme('colors.blue.700');
 
@@ -124,7 +124,7 @@
   --bolt-elements-code-background: theme('colors.gray.800');
   --bolt-elements-code-text: theme('colors.white');
 
-  --bolt-elements-button-primary-background: theme('colors.alpha.blue.10');
+  --bolt-elements-button-primary-background: theme('colors.blue.100');
   --bolt-elements-button-primary-backgroundHover: theme('colors.alpha.blue.20');
   --bolt-elements-button-primary-text: theme('colors.blue.500');
 
@@ -142,7 +142,7 @@
   --bolt-elements-item-contentDanger: theme('colors.red.500');
   --bolt-elements-item-backgroundDefault: rgba(255, 255, 255, 0);
   --bolt-elements-item-backgroundActive: theme('colors.alpha.white.10');
-  --bolt-elements-item-backgroundAccent: theme('colors.alpha.blue.10');
+  --bolt-elements-item-backgroundAccent: theme('colors.blue.100');
   --bolt-elements-item-backgroundDanger: theme('colors.alpha.red.10');
 
   --bolt-elements-loader-background: theme('colors.alpha.gray.10');
@@ -174,7 +174,7 @@
   --bolt-elements-prompt-background: theme('colors.alpha.gray.80');
 
   --bolt-elements-sidebar-dropdownShadow: theme('colors.alpha.gray.30');
-  --bolt-elements-sidebar-buttonBackgroundDefault: theme('colors.alpha.blue.10');
+  --bolt-elements-sidebar-buttonBackgroundDefault: theme('colors.blue.100');
   --bolt-elements-sidebar-buttonBackgroundHover: theme('colors.alpha.blue.20');
   --bolt-elements-sidebar-buttonText: theme('colors.blue.500');
 
