--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -17,7 +17,7 @@
   --bolt-elements-code-text: theme('colors.gray.950');
 
   --bolt-elements-button-primary-background: theme('colors.blue.100');
-  --bolt-elements-button-primary-backgroundHover: theme('colors.alpha.blue.20');
+  --bolt-elements-button-primary-backgroundHover: theme('colors.blue.200');
   --bolt-elements-button-primary-text: theme('colors.blue.500');
 
   --bolt-elements-button-secondary-background: theme('colors.alpha.gray.5');
@@ -67,7 +67,7 @@
 
   --bolt-elements-sidebar-dropdownShadow: theme('colors.alpha.gray.10');
   --bolt-elements-sidebar-buttonBackgroundDefault: theme('colors.blue.100');
-  --bolt-elements-sidebar-buttonBackgroundHover: theme('colors.alpha.blue.20');
+  --bolt-elements-sidebar-buttonBackgroundHover: theme('colors.blue.200');
   --bolt-elements-sidebar-buttonText: theme('colors.blue.700');
 
   --bolt-elements-preview-addressBar-background: theme('colors.gray.100');
@@ -125,7 +125,7 @@
   --bolt-elements-code-text: theme('colors.white');
 
   --bolt-elements-button-primary-background: theme('colors.blue.100');
-  --bolt-elements-button-primary-backgroundHover: theme('colors.alpha.blue.20');
+  --bolt-elements-button-primary-backgroundHover: theme('colors.blue.200');
   --bolt-elements-button-primary-text: theme('colors.blue.500');
 
   --bolt-elements-button-secondary-background: theme('colors.alpha.white.5');
@@ -175,7 +175,7 @@
 
   --bolt-elements-sidebar-dropdownShadow: theme('colors.alpha.gray.30');
   --bolt-elements-sidebar-buttonBackgroundDefault: theme('colors.blue.100');
-  --bolt-elements-sidebar-buttonBackgroundHover: theme('colors.alpha.blue.20');
+  --bolt-elements-sidebar-buttonBackgroundHover: theme('colors.blue.200');
   --bolt-elements-sidebar-buttonText: theme('colors.blue.500');
 
   --bolt-elements-preview-addressBar-background: var(--bolt-elements-bg-depth-1);
